build: mejorar configuración de Maven y añadir propiedades para JavaFX
- Refactorizado pom.xml para optimizar gestión de dependencias.
- Actualizada la versión de Guava con exclusiones de conflictos.
- Mejoradas las configuraciones del compilador y del plugin de JavaFX.
- Añadido archivo config.properties para la configuración de JavaFX y Jansi.